--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span id="size">30</span>
         <button id="increase">+</button>
         <input type="color" id="color" />
-        <button id="clear">clear</button>
+        <button id="clear">x</button>
     </div>
 
 
